--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -15,9 +15,6 @@
 							<td class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 								<%= f.attachment_field :item_img %>
 							</td>
-							<td class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-								<%= link_to "画像をアップロードする", :back, class: "btn btn-danger" %>
-							</td>
 						</div>
 					</tr>
 					<tr>
@@ -41,17 +38,17 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td>在庫</p>
+						<td>在庫</td>
 						<td><%= f.text_field :stock %></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>発売日</p>
+						<td>発売日</td>
 						<td><%= f.text_field :on_sale_date %></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>アーティストid</p>
+						<td>アーティストid</td>
 						<td><%= f.text_field :artist_id, value: @artist.id %></td>
 						<td></td>
 					</tr>
