--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,13 +7,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="First slide">
+      <%= image_tag '1.jpg', class:"d-block w-100", :alt => 'First slide' %>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Second slide">
+    <%= image_tag '2.jpg', class:"d-block w-100", :alt => 'Second slide' %>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Third slide">
+    <%= image_tag '3.jpg', class:"d-block w-100", :alt => 'Third slide' %>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
