--- a/app/views/admins/items/edit.html.erb
+++ b/app/views/admins/items/edit.html.erb
@@ -8,7 +8,7 @@
 		</div>
 
 	    <div class="row">
-        	<%= form_for(@item, url: edit_admins_item_path(item) do |f| %>
+        	<%= form_for(@item, url: admins_item_path, method: :patch) do |f| %>
 			    <table class="table col-12 mx-auto" >
 			      <thead class="thead-light">
 			        <tr>
@@ -24,18 +24,20 @@
 			      </thead>
 			      <tbody>
 			        <tr class="tr">
-						<td></td>
-						<td><%= @item.album_name %></td>
-						<td><%= @item.label %></td>
-						<td><%= @item.item_price_tax_free %></td>
-						<td><%= @item.genre_id %></td>
-						<td><%= @item.stock %></td>
-						<td><%= @item.on_sale_date %></td>
-						<td><%= link_to "更新", class: "btn btn-danger" do %><% end %></td>
+						<td><%= f.attachment_field :item_img %></td>
+						<td><%= f.text_field :album_name %></td>
+						<td><%= f.text_field :label %></td>
+						<td><%= f.text_field :item_price_tax_free %></td>
+						<td><%= f.text_field :genre_id %></td>
+						<td><%= f.text_field :stock %></td>
+						<td><%= f.text_field :on_sale_date %></td>
+						<td>
+							<%= f.submit "更新", class: "btn btn-danger" %><% end %>
+							<%= link_to "削除", hidden_item_path(@item), method: :patch, class: "btn btn-danger" %>
+						</td>
 			        </tr>
 			      </tbody>
 				</table>
-			<% end %>
 		</div>
 	</div>
 </div>
