--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,13 +5,14 @@
 
 <h2><%= current_user.user_name %>の編集ページ</h2>
 
-<%= form_for current_user do |f| %>
+<%= form_for(current_user , url: user_path , method: :put) do |f| %>
 <p>ユーザーネーム：<%= f.text_field :user_name %></p>
 <p>氏名（カタカナ）：<%= f.text_field :name_kana %></p>
 <p>氏名（漢字）：<%= f.text_field :name_kanji %></p>
 <p>電話番号：<%= f.text_field :phone_number %></p>
+<p>郵便番号：<%= f.text_field :postal_code %></p>
+<p>住所：<%= f.text_field :address %></p>
 <p>Ｅｍａｉｌ：<%= f.email_field :email %></p>
-<p>パスワード：<%= f.password_field :password %></p>
 <%= f.submit "編集" %>
 <% end %>
 
