--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to search_path, class:"btn btn-outline-light mx-2" do %>
+        <%= link_to items_search_path, class:"btn btn-outline-light mx-2" do %>
           <i class="fas fa-search"></i>
         <% end %>
       </li>
@@ -128,7 +128,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to search_path, class:"btn btn-outline-light mx-2" do %>
+        <%= link_to items_search_path, class:"btn btn-outline-light mx-2" do %>
           <i class="fas fa-search"></i>
         <% end %>
       </li>
