--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -11,7 +11,7 @@
     <h5 class="card-title"><%= item.artist.artist_name %></h5>
     <h5 class="card-title"><%= item.label %></h5>
     <h5 class="card-title">¥<%= item.item_price_tax_free %></h5>
-    <%= link_to "詳細ページ", item_path(item.id),class:"btn btn-primary" %>
+    <%= link_to "詳細ページ", (),class:"btn btn-primary" %>
   </div>
 </div>
  <% end %>
