--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -40,13 +40,17 @@
 
 
      <%= form_for(cart_item, url: user_cart_item_path(current_user.id,cart_item.id), method: :patch) do |f| %>
-    <%= f.text_field :item_cart_counted, :size=>"10x10" %>
+     <%= f.number_field :item_cart_counted , in: 1...20 %>
       <%= button_tag :type => "submit", :class =>"btn btn-danger" do %>
         <i class="fas fa-sync"></i>
       <% end %>
     <% end %>
     
-     <td><button type="button" class="btn btn-danger"><i class="fas fa-times"></i></button></td>
+     <td>
+     <%= link_to user_cart_item_path(current_user, cart_item), method: :delete,class:"btn btn-danger" do %>
+     <i class="fas fa-times"></i>
+     <% end %>
+
      <td>¥<%= cart_item.item.item_price_tax_free * cart_item.item_cart_counted %></td>
    </tr>
  </tbody>
