--- a/app/views/admins/artists/show.html.erb
+++ b/app/views/admins/artists/show.html.erb
@@ -25,7 +25,9 @@
       <tbody>
         <tr class="tr">
           <% @artist.items.each do |item| %>
-          <th scope="row"><img src="" style="width: 70px; height: 70px; background-color: black;"></th>
+          <th scope="row">
+          <%= attachment_image_tag item, :item_img, class:"card-img-top", style: "width: 100px; height: 100px; " %>
+          </th>
           <td><%= item.album_name %></td>
           <td><%= item.label %></td>
           <td><%= item.item_price_tax_free %></td>
