--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,52 +1,46 @@
-<div class="container">
-	<div class="row">
-		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
-		<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-			<h1>Items#show:商品の詳細</h1>
+<h1>Items#show:商品の詳細</h1>
 			<p>Find me in app/views/items/show.html.erb</p>
 
-			<h2>商品の詳細</h2>
+<div class="container">
+	<div class="row">
+
+		<div class="col-lg-10 mx-auto">
+			<div class="container">
 			<div class = "row">
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-					<img src="..." alt="Card image cap" style="height: 200px; background-color: gray; "><!-- item画像を入れます -->
+				<!-- 左 -->
+				<div class="col-lg-6 mb-5">
+					<%= attachment_image_tag @item, :item_img, class:"", style: "width: 100%; height: 100%;" %>
 				</div>
-				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
-				<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7 bg-info mb-3">
-					<table>
-						<tr>
-							<td>アルバム名</td>
-							<td></td>
-							<td><%= @item.album_name %></td>
-						</tr>
-						<tr>
-							<td>アーティスト名</td>
-							<td></td>
-							<td><%= @item.artist.artist_name %></td>
-						</tr>
-						<tr>
-							<td>価格</td>
-							<td></td>
-							<td><%= @item.item_price_tax_free %></td>
-						</tr>
-						<tr>
-							<td>在庫</td>
-							<td></td>
-							<td><%= @item.stock %>点あり</td>
-						</tr>
-						<tr>
-							<td><%= form_for(@cart_item , url:item_cart_items_path(@item)) do |f| %>
-	<%= f.number_field :item_cart_counted ,value:"1", in: 1...21, size: 20 %>点<%= f.submit "カートにいれる" %><% end %></td>
-							<td>
-							</td>
-							<td>
-								<%= link_to "前のページに戻る", :back, class: "btn btn-success white-text" %>
-								<!-- ブラウザの戻る機能 -->
-							</td>
-						</tr>
-					</table>
+				
+				<!-- 右 -->
+				<div class="col-lg-6 bg-white px-3 mb-5">
+
+					<h2 class="my-3"><%= @item.album_name %></h2>
+					<p class="mb-5">アーティスト名: <%= @item.artist.artist_name %></p>
+
+					<p class="mb-0">価格</p>
+					<h3  class="mb-3">¥ <%= @item.item_price_tax_free %></h3>
+
+					<p class="mb-3">在庫: <%= @item.stock %>点</p>
+
+					<%= form_for(@cart_item , url:item_cart_items_path(@item), html:  {class: "float-right"}) do |f|  %>
+					<%= f.number_field :item_cart_counted ,value:"1", in: 1...21, size: 20 %>点
+					
+						<%= button_tag :type => "submit", :class =>"btn btn-danger my-5" do %>
+	  					<i class="fas fa-cart-arrow-down"></i> カートにいれる
+						<% end %>
+					<% end %>
+					
 				</div>
+
+			</div>
 			</div>
 		</div>
-		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+
+		<%= link_to :back, class: "btn btn-success white-text col-lg-6 mx-auto mb-5" do %>
+					<i class="fas fa-chevron-left"></i> 前のページに戻る
+					<% end %>
+
+
 	</div>
 </div>
