--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -2,44 +2,47 @@
 <div class="container">
 <div class="row">
 <h2 class="border-bottom my-5"><%= @genre.genre_name %>に属するCD一覧</h2>
-<div class="col-lg-12 my-5">
-<% @genre.items.each do |item| %>
+</div>
+</div>
+<div class="container">
+<div class="row">
+
+<p>
+<%= @genre_items.total_count %>件中<%= @genre_items.offset_value %>
+〜<%= @genre_items.offset_value + @genre_items.length %>件を表示しています。
+</p>
+
+<!-- メインカラム -->
+<div class="col-lg-12 mb-5">
+
+<div class="container">
+<div class="row">
+
+<% @genre_items.each do |item| %>
 <div class="card mx-auto mb-3" style="width: 18rem;">
 <%= attachment_image_tag item, :item_img, class:"card-img-top", style: "height: 200px;" %>
   <div class="card-body">
-    <h5><%= link_to item.album_name, item_path(item.id), class:"text-danger" %></h5>
+    <h5 class="card-title"><%= link_to item.album_name, item_path(item.id), class:"text-danger" %></h5>
     <h5 class="card-title"><%= item.artist.artist_name %></h5>
     <h5 class="card-title"><%= item.label %></h5>
     <h5 class="card-title">¥<%= item.item_price_tax_free %></h5>
-    <%= link_to "詳細ページ", (),class:"btn btn-primary" %>
+    <div class="card-body button-center" style="padding: 0;">
+    <%= link_to item_path(item.id), class:"btn btn-outline-danger card-button" do %>
+    詳細 <i class="fas fa-chevron-right"></i>
+    <% end %>
+    </div>
   </div>
 </div>
  <% end %>
+</div><!-- /row -->
+
+</div><!-- /container -->
+</div><!-- /col-lg-12 mb-5 -->
+
+<!-- ページャー -->
+<div class="mx-auto mb-5">
+<%= paginate @genre_items, class: "pagenate" %>
+</div>
 
 </div>
-</div>
-</div>
-
-
-
-<!-- pagenateの指定 -->
-<div class="mx-auto my-5">
-<nav aria-label="... ">
-  <ul class="pagination">
-    <li class="page-item disabled">
-      <span class="page-link">Previous</span>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item active">
-      <span class="page-link">
-        2
-        <span class="sr-only">(current)</span>
-      </span>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
-    </li>
-  </ul>
-</nav>
 </div>
