--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -55,6 +55,11 @@
   </div><!-- open -->
 </div><!-- col-lg-12 my-3 -->
 
+<p class="">
+<%= @items.total_count %>件中<%= @items.offset_value %>
+〜<%= @items.offset_value + @items.length %>件を表示しています。
+</p>
+
 <!-- メインカラム -->
 <div class="col-lg-12 mb-5">
 
@@ -76,47 +81,16 @@
   </div>
 </div>
  <% end %>
+</div><!-- /row -->
+
+</div><!-- /container -->
+</div><!-- /col-lg-12 mb-5 -->
+
+<!-- ページャー -->
+<div class="mx-auto mb-5">
+<%= paginate @items, class: "pagenate" %>
 </div>
+
 
 </div><!-- /row -->
 </div><!-- /container -->
-
-<!-- ページャー -->
-<div class="mx-auto my-5">
-<nav aria-label="... ">
-  <ul class="pagination">
-    <li class="page-item disabled">
-      <span class="page-link">Previous</span>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item active">
-      <span class="page-link">
-        2
-        <span class="sr-only">(current)</span>
-      </span>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
-    </li>
-  </ul>
-</nav>
-</div>
-
-
-</div>
-
-
-
-
-
-
-
-</div>
-</div>
-
-
-
-
-
-<!-- pagenateをします -->
