--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,92 +1,112 @@
-<h4>Users#show:マイページ</h4>
+<!-- <h4>Users#show:マイページ</h4>
 <p>Find me in app/views/users/show.html.erb</p>
+ -->
+<div class="row justify-content-center">
+<div class="col-10">
+	<div class="well well-lg text-center">
+<ul class="list-group mt-4">
+	<li class="list-group-item bg-danger text-white"><h5 class="">User Info</h5></li>
+  <li class="list-group-item p-3"><p class="col-2 float-left">Name:</p><a class="list-group-item list-group-item-action d-inline col-8 float-right"><%= current_user.user_name %></a></li>
+   <li class="list-group-item p-3"><p class="col-2 float-left">Email：</p><a class="list-group-item list-group-item-action d-inline col-8 float-right"><%= current_user.email %></a></li>
+  <li class="list-group-item"><%= link_to cart_path(current_user), class:"btn btn-warning pl-3 pr-3 w-75" do %>My Cart<i class="fas fa-shopping-cart ml-2"></i><% end %></li>
+</ul></br>
 
-<div class="well text-center">
+	</div>
 
-	<h3>User Info</h3>
-	<p>UserName:<%= current_user.user_name %></p>
-<p>Email：<%= current_user.email %></p>
-
-<%= link_to "My Cart", cart_path(current_user), class:"btn btn-info" %></br></br>
-</div>
-
-<ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#home">注文履歴</a></li>
-  <li><a data-toggle="tab" href="#menu1">登録情報</a></li>
-  <li><a data-toggle="tab" href="#menu2">Q&A</a></li>
+<ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">注文履歴</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">登録情報</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Q&A</a>
+  </li>
 </ul>
-
-<div class="tab-content">
-  <div id="home" class="tab-pane fade in active">
-	<h3>Order History</h3>
-	<% @sum = 1 %><% @total = 0 %>
-	<% current_user.orders.each do |order| %>
-	<p>注文番号：<%= @sum %>　配送状況：<%= order.status %></p>
-		<% order.order_items.each do |oi| %>
-			<p>購入商品名：<%= oi.item.album_name %>個数：<%= oi.item_order_counted %> 小計：<%=oi.item_order_counted * oi.item_order_price %></p>
-			<% @total += oi.item_order_counted * oi.item_order_price %>
-		<% end %>
-		<p>合計：<%= @total %>円</p>--
-	<% @sum += 1 %>
-	<% end %>
-	<%= paginate @order, window: 2 %></br>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+  	<div class="card text-center mt-4">
+  <div class="card-body bg-info text-white"><h5>
+    Order History</h5>
   </div>
-  <div id="menu1" class="tab-pane fade">
-	<h3>Your registration Info</h3>
-	<p>Name：<%= current_user.name_kanji %>（<%= current_user.name_kana %>）</p>
-	<p>Tel：<%= current_user.phone_number %></p>
-	<p>郵便番号：<%= current_user.postal_code %></p>
-	<p>住所：<%= current_user.address %></p>
-	<p><%= link_to "情報を編集する",edit_user_path(current_user) %></p>
- </div>
- <div id="menu2" class="tab-pane fade">
- 	<h3>よくあるご質問</h3>
- 	<div class="panel-group" id="accordion">
-	  <div class="panel panel-default">
-	    <div class="panel-heading">
-	      <h4 class="panel-title">
-	        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-	        Q:CirclePlusはどんなサイトですか。</a>
-	      </h4>
-	    </div>
-		<div id="collapse1" class="panel-collapse collapse in">
-		   <div class="panel-body">CirclePlusは、Circle+が運営する疑似ECサイトです。</br>ECは、電子商取引(Electronic Commerce)の略称で、PCやスマホ、タブレット等のデバイスによる注文から決済を行うことで商品やサービスの売買を行う商取引を指します。
-		   </div>
-		</div>
-		  </div>
-	 	<div class="panel panel-default">
-		    <div class="panel-heading">
-		      <h4 class="panel-title">
-		        <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Q:Circle+とはどんな団体ですか。</a>
-		      </h4>
-		 	 </div>
-		    <div id="collapse2" class="panel-collapse collapse">
-		      <div class="panel-body">Circle+は、有志による非営利団体です。Rails学習が主目的であった初学者が、未来のエンジニアへと進化を図ろうとしています。ECサイトにおけるイノベーションを創造する「エンジニア」こそが、必要とされている。Circle+は、エンジニア発イノベーションを加速するために、IT業界として提供できる価値・存在意義を再定義し、発信していくことを目的とし、発足いたしました。
-		      </div>
-		  	</div>
-		</div>
-		  <div class="panel panel-default">
-		    <div class="panel-heading">
-		      <h4 class="panel-title">
-		        <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Q：退会したいのですが。</a>
-		      </h4>
-		    </div>
-			    <div id="collapse3" class="panel-collapse collapse">
-			      <div class="panel-body">こちらより退会処理を行うことができます。
-			      	<a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">退会する</a>
-					  <div class="collapse" id="collapseExample">
-					  <div class="card card-body">
-					    <p>一度行った退会処理は取り消すことができません。</p>
-					    <p>また、同じメールアドレスでの会員登録はできませんので、退会処理を行う際はご注意ください。</br><%= link_to "承諾して退会する", user_destroy_path(current_user),method: :patch %></br></p>
-					  </div>
-		    		  </div>
-		   		  </div>
-		        </div>
 </div>
+<% current_user.orders.each do |order| %>
+		<div class="card">
+		  <div class="card-body text-center">
+		  	<a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= order.id %>">
+				      <P class="w-25 float-left">注文番号：<%= @sum %></P><p class="w-75 float-right">　配送状況：<%= order.status %></p></a>
+		  </div>
+		 	<div id="collapse<%= order.id %>" class="card-collapse collapse in">
+				<div class="card-body"><% order.order_items.each do |oi| %>
+				<p>購入商品名：<%= oi.item.album_name %>個数：<%= oi.item_order_counted %> 小計：<%=oi.item_order_counted * oi.item_order_price %></p>
+				<% @total += oi.item_order_counted * oi.item_order_price %>
+			<% end %>
+			<p>合計：<%= @total %>円</p></br>
+				<% @sum += 1 %>
+				</div>
+			</div>
+		</div>
+	<% end %>
+  </div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+  	<ul class="list-group mt-4">
+	<li class="list-group-item bg-info text-white"><h5 class="text-center">Your Information</h5></li>
+  <li class="list-group-item p-3"><p class="col-2 float-left">Name:</p><a class="list-group-item list-group-item-action d-inline col-8 float-right"><%= current_user.name_kanji %>（<%= current_user.name_kana %>）</a></li>
+   <li class="list-group-item p-3"><p class="col-2 float-left">Tel：</p><a class="list-group-item list-group-item-action d-inline col-8 float-right"><%= current_user.phone_number %></a></li>
+   <li class="list-group-item p-3"><p class="col-2 float-left">Postal Code：</p><a class="list-group-item list-group-item-action d-inline col-8 float-right"><%= current_user.postal_code %></a></li>
+   <li class="list-group-item p-3"><p class="col-3 float-left">Address：</p><a class="list-group-item list-group-item-action d-inline col-8 float-right"><%= current_user.address %></a></li>
+  <li class="list-group-item text-center"><%= link_to "情報を編集する",edit_user_path(current_user),class:"btn btn-warning w-75 " %></li>
+</ul></br>
+  </div>
+  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+  	<div class="card text-center mt-4">
+  <div class="card-body bg-info text-white">
+    <h5>よくあるご質問</h5>
+  </div>
+</div>
+		<div class="card">
+		  <div class="card-body text-center">
+		  	<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+				        Q：CirclePlusはどんなサイトですか。</a>
+		  </div>
+		 	<div id="collapse1" class="card-collapse collapse in">
+				<div class="card-body">CirclePlusは、Circle+が作成した疑似ECサイトです。</br>ECは、電子商取引(Electronic Commerce)の略称で、PCやスマホ、タブレット等のデバイスによる注文から決済を行うことで商品やサービスの売買を行う商取引を指します。</br>
+				</div>
+			</div>
+		</div>
+		<div class="card">
+		  <div class="card-body text-center">
+		  	<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+				       Q：Circle+はどんな団体ですか。</a>
+		  </div>
+		 	<div id="collapse2" class="card-collapse collapse in">
+				<div class="card-body">Circle+は、有志による非営利団体です。</br>Rails学習が主目的であった初学者が、エンジニアへと進化を図ろうとしています。</br>近年、ECサイトにおけるイノベーションを創造する「エンジニア」こそが、必要とされています。</br>Circle+は、エンジニア発のイノベーションを加速するために、IT業界として提供できる価値・存在意義を再定義し、発信していくことを目的とし、発足いたしました。</br>
+				</div>
+			</div>
+		</div>
+		<div class="card text-center">
+		  <div class="card-body">
+		  	<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+				       Q：退会したいのですが。</a>
+		  </div>
+		 	<div id="collapse3" class="card-collapse collapse in">
+				<div class="card-body">
+					こちらより退会処理を行うことができます。</br>
+				  <a class="btn btn-warning mr-5 ml-5 w-50" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">退会する</a></br>
+	 			  <div class="collapse" id="collapseExample">
+				    <div class="card card-body">
+				  	  <p class="text-danger">一度行った退会処理は取り消すことができません。</p>
+					  <p>また、同じメールアドレスでの会員登録はできません。</p><%= link_to "承諾して退会する", user_destroy_path(current_user),method: :patch ,class:"text-center" %>
+					</div>
+		    	  </div>
+				</div>
+			</div>
+		</div>
+  </div>
 
-  </br>
-  </br>
-  </br>
 
+</div>
+  </br>
 </div>
 </div>
